--- a/package.json
+++ b/package.json
@@ -6,17 +6,31 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "Validator": "^1.1.2",
     "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
     "css-reset": "0.0.1",
+    "material-ui": "^0.20.2",
+    "mdbreact": "^5.0.1",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-modal": "^3.12.1",
+    "react-native-elements": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-validation": "^3.0.7",
+    "reactjs-popup": "^2.0.4",
+    "reactstrap": "^8.8.1",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "validate": "^5.1.0",
+    "validator": "^13.5.2",
+    "web-vitals": "^0.2.4",
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "case-sensitive-paths-webpack-plugin": "^2.3.0"
   }
 }
