--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-modal": "^3.12.1",
     "react-native-draggable-grid": "^2.1.2",
     "react-native-elements": "^3.1.0",
+    "react-password-mask": "^3.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-validation": "^3.0.7",
