--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d3": "^6.3.1",
     "d3-drag": "^2.0.0",
     "framer-motion": "^3.2.1",
+    "gh-pages": "^3.1.0",
     "html-to-react": "^1.4.5",
     "material-ui": "^0.20.2",
     "mdbreact": "^5.0.1",
@@ -44,7 +45,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -64,6 +67,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://spqjf12345.github.io/madCamp_week3/",
   "devDependencies": {
     "case-sensitive-paths-webpack-plugin": "^2.3.0"
   }
