--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://spqjf12345.github.io/madCamp_week3/",
+  "homepage": "https://heejaykong.github.io/mad-camp-week3-Gardening-To-Do",
   "devDependencies": {
     "case-sensitive-paths-webpack-plugin": "^2.3.0"
   }
